# tower-of-bazel

./: .bazelrc  .gitattributes  .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: check-frontend-splitfire-desktop.yml  deploy-backend-musik88-web.yml  deploy-frontend-splitfire-desktop.yml
backend/: README.md
backend/app/: BUILD  Gemfile
backend/app/config/: credentials.yml.enc
backend/musik88-web/: .env-example  .gitignore  .rubocop.yml  .travis.yml  Gemfile  README.md  _debug.sh  package.json
backend/musik88-web/app/admin/: album_artists.rb  album_providers.rb  albums.rb  artist_providers.rb  artists.rb  audio_file.rb  authorizations.rb  chord_histories.rb  chord_shapes.rb  chords.rb  comments.rb  javanese_gending_notations.rb  javanese_gendings.rb  lyrics.rb  meta.rb  pages.rb  song_artists.rb  song_provider_vote.rb  song_providers.rb  songs.rb  splitfire_result.rb  user_settings.rb  users.rb  wallets.rb
backend/musik88-web/app/channels/: bass64_channel.rb  bonzo_channel.rb  karokowe_channel.rb  splitfire_channel.rb  spotify_export_channel.rb  wallet_channel.rb  youtube_to_audio_channel.rb
backend/musik88-web/app/controllers/: about_controller.rb  albums_controller.rb  api_controller.rb  application_controller.rb  artists_controller.rb  audio_files_controller.rb  chords_controller.rb  comments_controller.rb  confirmations_controller.rb  errors_controller.rb  javanese_gamelan_controller.rb  lyrics_controller.rb  my_controller.rb  pages_controller.rb  relationships_controller.rb  sessions_controller.rb  songs_controller.rb  users_controller.rb  welcome_controller.rb
backend/musik88-web/app/helpers/: application_helper.rb  javanese_gamelan_helper.rb  my_helper.rb  users_helper.rb
backend/musik88-web/app/jobs/: audio_analysis_job.rb  audio_analysis_splitfire_result_job.rb  bass64_job.rb  bass_backing_track_job.rb  bonzo_job.rb  download_file_job.rb  drum_backing_track_job.rb  guitar_backing_track_job.rb  karokowe_job.rb  splitfire_demo_job.rb  splitfire_job.rb  spotify_onboarding_export_job.rb  spotify_sync_export_job.rb  wallet_evm_job.rb  wallet_solana_job.rb  youtube_to_audio_job.rb
backend/musik88-web/app/mailers/: application_mailer.rb  devise_mailer.rb  user_notifier_mailer.rb
backend/musik88-web/app/models/: active_admin_adapter.rb  album.rb  album_provider.rb  album_vote.rb  artist.rb  artist_provider.rb  artist_vote.rb  audio_file.rb  audio_file_bass64_status.rb  audio_file_bonzo_status.rb  audio_file_karokowe_status.rb  audio_file_split_status.rb  authorization.rb  bass_backing_track.rb  bass_backing_track_file.rb  bass_file.rb  chord.rb  chord_history.rb  chord_shape.rb  chord_vote.rb  comment.rb  drum_backing_track.rb  drum_file.rb  gending_notation_vote.rb  gending_vote.rb  guitar_backing_track_file.rb  javanese_gending.rb  javanese_gending_notation.rb  karaoke_file.rb  karaoke_file_lover.rb  lyric.rb  lyric_synch.rb  lyric_vote.rb  other_file.rb  (+10 more)
backend/musik88-web/audio-analysis/: README.md  audio_file.py  audio_length.py  onset.py
backend/musik88-web/config/: application.rb  boot.rb  credentials.yml.enc  database.yml  puma.rb  routes.rb  routes.rb.save  secrets.yml  sitemap.rb  storage.yml
backend/musik88-web/db/: schema.rb
backend/musik88-web/docs/: ab-test.md  audio-processing.md  debian.md  javanese_notation.md  song_artists.md  what_is.md
backend/musik88-web/public/: BACH-whitepaper.md  ads.txt
backend/musik88-web/test/: test_helper.rb
backend/rust-axum/: BUILD  Cargo.toml
backend/rust-axum/src/: main.rs
frontend/apple/: BUILD.bazel
frontend/apple/app/: BUILD.bazel
frontend/apple/modules/: BUILD.bazel
frontend/apple/modules/API/: BUILD.bazel
frontend/apple/modules/Models/: BUILD.bazel
frontend/apple/tools/: extensions.bzl
frontend/desktop/: package-lock.json  package.json
frontend/desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/splitfire-desktop/: .gitignore  BUILD  README.md  bun.lockb  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/splitfire-desktop/_lib/: params.ts
frontend/splitfire-desktop/_ui/: LoadingView.tsx  address-bar.tsx  global-nav.tsx  menus.ts  skeleton-card.tsx  tab.tsx
frontend/splitfire-desktop/app/: layout.tsx  page.tsx
frontend/splitfire-desktop/lib/: db.ts  logger.ts  tauri-handler.ts
frontend/splitfire-desktop/models/: SongVotesDetailResponse.tsx  account.ts  audio-file.tsx  content.ts  lyricSynches.ts  shared.ts  song-response.ts  split.ts
frontend/splitfire-desktop/public/: index.html
frontend/splitfire-desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/splitfire-desktop/src-tauri/icons/: icon.icns
frontend/splitfire-desktop/src-tauri/src/: lib.rs  main.rs  players.rs
frontend/splitfire-desktop/src-tauri/src/command/: constants.rs  download_result_files.rs  mod.rs  pages.rs  player_controls.rs  player_prepare.rs  player_record.rs  player_set_volume.rs  player_unmount.rs  settings.rs
frontend/splitfire-desktop/src-tauri/src/models/: account.rs  content.rs  mod.rs  player.rs  settings.rs
frontend/splitfire-desktop/src-tauri/src/record/: mod.rs  record_instrument.rs
frontend/splitfire-desktop/src-tauri/src/rest/: account.rs  content.rs  mod.rs
frontend/splitfire-web/: BUILD.bazel  package-lock.json  package.json
frontend/splitfire-web/app/: layout.tsx  page.tsx
frontend/splitfire-web/app/_components/: footer.tsx  header.tsx
frontend/splitfire-web/app/about/: layout.tsx  page.tsx
frontend/splitfire-web/app/community/: layout.tsx  page.tsx
frontend/splitfire-web/app/download/: layout.tsx  page.tsx
frontend/splitfire-web/app/just-play/: layout.tsx  page.tsx
frontend/splitfire-web/app/learn/: layout.tsx  page.tsx
lib/: BUILD
lib/crate_error_codes/: Cargo.toml
lib/crate_error_codes/bindings/: UserError.ts
lib/crate_error_codes/src/: lib.rs
lib/gem_error_codes/: Cargo.toml  Gemfile  README.md  Rakefile  gem_error_codes.gemspec
lib/gem_error_codes/lib/: gem_error_codes.rb
lib/gem_error_codes/sig/: gem_error_codes.rbs
splitfire-crypto/not-wallet/not-desktop/: bun.lockb  package.json
(+586 files in other folders)
