"tower-of-bazel"

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_ruby", version = "0.12.1")
bazel_dep(name = "rules_apple", version = "3.6.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_xcodeproj", version = "2.5.2")
bazel_dep(name = "apple_support", version = "1.15.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_swift", version = "1.18.0", repo_name = "build_bazel_rules_swift")
# Android
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_jvm_external", version = "5.3")

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version_file = "//backend/app:.ruby-version",
)
use_repo(ruby, "ruby")
ruby.bundle_fetch(
    name = "bundle",
    gemfile = "//backend/app:Gemfile",
    gemfile_lock = "//backend/app:Gemfile.lock",
)
use_repo(ruby, "bundle", "ruby_toolchains")

# rules_apple dependencies
bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)

non_module_dependencies = use_extension("//frontend/apple/tools:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "SwiftLint")

# Rulesets Android / Java / Kotlin
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "androidx.appcompat:appcompat:1.5.1",
        # Jetpack Compose Dependencies
        "androidx.activity:activity-compose:1.6.0",
        "androidx.compose.material:material:1.2.1",
        "androidx.compose.ui:ui:1.2.1",
        "androidx.compose.ui:ui-tooling:1.2.1",
        "androidx.compose.compiler:compiler:1.3.2",
        "androidx.compose.runtime:runtime:1.2.1",
        # Dependencies needed to manage version conflicts
        "androidx.core:core:1.6.0",
        "androidx.core:core-ktx:1.6.0",
        "androidx.savedstate:savedstate-ktx:1.2.0",
        "androidx.savedstate:savedstate:1.2.0",
        "androidx.lifecycle:lifecycle-livedata-core-ktx:2.5.1",
        "androidx.lifecycle:lifecycle-livedata-core:2.5.1",
        "androidx.lifecycle:lifecycle-livedata:2.5.1",
        "androidx.lifecycle:lifecycle-process:2.5.1",
        "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1",
        "androidx.lifecycle:lifecycle-runtime:2.5.1",
        "androidx.lifecycle:lifecycle-service:2.5.1",
        "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1",
        "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1",
        "androidx.lifecycle:lifecycle-viewmodel:2.5.1",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")