package_group(
    name = "default_library_visibility",
    includes = [
        # Project generation.
        "@rules_xcodeproj//xcodeproj:generated",
    ],
    packages = [
        # The application package.
        "//frontend/apple/app",
        # All other modules.
        "//frontend/apple/modules/...",
    ],
)

package_group(
    name = "default_test_visibility",
    includes = [
        # Project generation.
        "@rules_xcodeproj//xcodeproj:generated",
    ],
)
