[package]
name = "app"
version = "0.2.0"
description = "SplitFire AI"
authors = ["setoelkahfi@gmail.com"]
license = "MIT"
repository = "https://github.com/setoelkahfi/splitfire-desktop"
default-run = "app"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1"
chrono = "0.4.31"
futures = "0.3"
home = "0.5.4"
hound = "3"
log = "^0.4"
once_cell = "1.18.0"
reqwest = { version = "0.11", features = ["json"] }
ringbuf = "0.3"
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tauri = { version = "1.7.1", features = [] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
url-builder = "0.1.1"
uri-template-system = "=0.1.0"

# Local crates
crate_error_codes = { path = "./../../../lib/crate_error_codes" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
